--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <article class="normal">
         <p>
-            Meu irmão querido, <br>
+            Meu irmão querido<em><sup>(de Pai e Mãe diferente)</sup></em>, <br>
             mesmo que a distância física nos separe, <br>
             a força da nossa amizade <br>
             e o vínculo que compartilhamos permanecem intactos. <br>
